商品销售档案添加公测版标识

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -98,7 +98,8 @@
                                         <dd class="col-sm-6" style="position:relative"><a href="javascript:goToDataFiles()"><span class="fa fa-server"></span>行为数据档案 </a>
                                             <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
                                         <dd class="col-sm-6"><a href="javascript:searchStoreData()"><span class="fa fa-book"></span>门店信息档案</a></dd>
-                                        <dd class="col-sm-6"><a href="javascript:searchItemData()"><span class="fa fa-cart-plus"></span>商品销售档案</a></dd>
+                                        <dd class="col-sm-6" style="position:relative"><a href="javascript:searchItemData()"><span class="fa fa-cart-plus"></span>商品销售档案</a>
+                                            <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
 
                                     </dl>
                                     <dl class="pull-left">
