--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -219,8 +219,8 @@
                         <div class="sl-v-list">
                             <div class="form-group has-success col-lg-3">
                                 <div style="display:block">
-                                    <input type="text" class="form-control" onkeyup="value=value.replace(/[^\d{1,}\.\d{1,}|\d{1,}]/g,'')" placeholder="利润最小金额"  id="min_money_auto" style="width:45%;display:inline;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);" />&nbsp;--
-                                    <input type="text" class="form-control" onkeyup="value=value.replace(/[^\d{1,}\.\d{1,}|\d{1,}]/g,'')" placeholder="利润最大金额"  id="max_money_auto" style="width:45%;display:inline;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);"/>
+                                    <input type="text" class="form-control" onkeyup="value=value.replace(/[^\d{1,}\.\d{1,}|\d{1,}]/g,'')" placeholder="毛利最小金额"  id="min_money_auto" style="width:45%;display:inline;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);" />&nbsp;--
+                                    <input type="text" class="form-control" onkeyup="value=value.replace(/[^\d{1,}\.\d{1,}|\d{1,}]/g,'')" placeholder="毛利最大金额"  id="max_money_auto" style="width:45%;display:inline;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);"/>
                                 </div>
                             </div>
                             <div class="form-group has-success col-lg-2">
@@ -231,8 +231,8 @@
                                     <option value="percent">从率</option>
                                 </select>
                             </div>
-                            <font id="showprofitattention" style="top:7px;right:75px;color:#337ab7;font-size:16px;font-weight:normal;">!</font>
-                            <font id="profitattention" style="font-size: 12px; color:#337ab7;white-space: nowrap; position: absolute; top: -10px; z-index: 1000; left: 750px; display: none;">利润结算方式</font>
+                            <font id="showprofitattention" style="top:7px;right:75px;color:#337ab7;font-size:16px;font-weight:bold;">!</font>
+                            <font id="profitattention" style="font-size: 12px; color:#337ab7;white-space: nowrap; position: absolute; top: -10px; z-index: 1000; left: 750px; display: none;">毛利结算方式</font>
                         </div>
                     </div>
                 </div>
@@ -256,8 +256,8 @@
 			                	<option value="20">拉新超20元</option>
 			              	</select>
 			           	</div>
-			           	<font id="showattention" style="top:7px;right:75px;color:#ffcc00;font-size:16px;font-weight:normal;">!</font>
-			           	<font id="attention" style="font-size: 12px; color:#ffcc00;white-space: nowrap; position: absolute; top: -10px; z-index: 1000; right: 330px; display: none;">拉新标识</font>
+			           	<font id="showattention" style="top:7px;right:75px;color:#ff0000;font-size:16px;font-weight:bold;">!</font>
+			           	<font id="attention" style="font-size: 12px; color:#ff0000;white-space: nowrap; position: absolute; top: -10px; z-index: 1000; right: 330px; display: none;">拉新标识</font>
                      </div>
                      </div>
                     </div>
