--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -212,7 +212,9 @@
                                         <dt><i></i>分析图</dt>
                                         <dd><a href="javascript:gotok()"><span class="fa fa-line-chart"></span>营业额分析</a></dd>
                                          <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-bar-chart"></span>用户分析</a></dd>
-										<!-- <dd><a href="javascript:goto_user_k()"><span class="fa fa-bar-chart"></span>用户分析</a></dd> -->
+                                        <dd><a href="javascript:gotobehavior()"><span class="fa fa-child"></span>用户行为分析</a></dd>
+
+                                        <!-- <dd><a href="javascript:goto_user_k()"><span class="fa fa-bar-chart"></span>用户分析</a></dd> -->
                                     </dl>
                                     <dl class="col-sm-3">
                                         <dt><i></i>专题分析</dt>
