成本控制第一版第一次优化

--- a/WebContent/cost_statistics/costStatistics_list.html
+++ b/WebContent/cost_statistics/costStatistics_list.html
@@ -316,7 +316,7 @@
 <body style="height: 100%">
 <div class="panel panel-primary">
     <div class="panel-heading">
-       成本控制查询
+       成本录入查询
     </div>
     <div class="panel-body">
         <div id="conditionsDiv" style="margin-top: 10px">
