--- a/WebContent/cost_statistics/costStatistics_statement.html
+++ b/WebContent/cost_statistics/costStatistics_statement.html
@@ -5,10 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="renderer" content="webkit">
     <title>成本报表</title>
-    <script type="text/javascript" src="../startbootstrap/js/jquery.1.10.2.min.js"></script>
-    <script type="text/javascript" src="../startbootstrap/js/layer.js"></script>
-    <script type="text/javascript" src="../scripts/bidLib.js"></script>
-    <script type="text/javascript" src="../scripts/ajaxfileupload.js"></script>
 
     <link href="../startbootstrap/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../startbootstrap/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
@@ -16,6 +12,14 @@
     <link href="../startbootstrap/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="../scripts/css/auto.css" rel="stylesheet">
     <link href="../custom_css/arrow.css" rel="stylesheet">
+    <link href="Content/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet" />
+
+    <script type="text/javascript" src="../startbootstrap/js/jquery.1.10.2.min.js"></script>
+    <script type="text/javascript" src="../startbootstrap/js/layer.js"></script>
+    <script type="text/javascript" src="../scripts/bidLib.js"></script>
+    <script type="text/javascript" src="../scripts/ajaxfileupload.js"></script>
+
+
     <script type="text/javascript" src="./select_view/select_option.js"></script>
     <script type="text/javascript" src="../scripts/auto.js"></script>
     <script type="text/javascript" src="../scripts/city.data.js"></script>
